--- a/_studies/2020-07-08-10.1136_bmjopen-2020-039519.md
+++ b/_studies/2020-07-08-10.1136_bmjopen-2020-039519.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Intravenöses hochdosiertes Vitamin C zur Behandlung von schwerem COVID-19: Studienprotokoll für eine multizentrische randomisierte kontrollierte Studie'
   description: 'Die rasche weltweite Ausbreitung von COVID-19 hat eine globale Gesundheitskrise verursacht. Bislang war die symptomatische unterstützende Behandlung die gängigste Therapie. Berichtet wurde, dass der Mechanismus von COVID-19 mit Zytokinstürmen und nachfolgenden immunogenen Schäden zusammenhängt, insbesondere mit Schäden am Endothel und der Alveolarmembran. Vitamin C (VC), auch bekannt als L-Ascorbinsäure, hat nachweislich antimikrobielle und immunmodulatorische Eigenschaften. Eine hohe Dosis intravenöser VC (HIVC) blockiert nachweislich mehrere Schlüsselkomponenten von Zytokinstürmen, und HIVC erwies sich in klinischen Studien bei Patienten mit bakteriell bedingter Sepsis und akutem Atemnotsyndrom (ARDS) als sicher und in unterschiedlichem Maße wirksam. Daher stellen wir die Hypothese auf, dass HIVC zur Behandlung von ARDS und Multiorganversagen im Zusammenhang mit COVID-19 eingesetzt werden könnte. Die Forscher haben eine multizentrische, prospektive, randomisierte, placebokontrollierte Studie konzipiert, an der 308 Erwachsene teilnehmen sollen, bei denen COVID-19 diagnostiziert und auf die Intensivstation verlegt wurde. Die Teilnehmer erhalten nach dem Zufallsprinzip in sterilem Wasser verdünntes HIVC oder ein Placebo für 7 Tage, sobald sie eingeschrieben sind. Patienten mit einer VC-Allergie in der Vorgeschichte, einer Lungenerkrankung im Endstadium, einer fortgeschrittenen malignen Erkrankung oder einem Glucose-6-Phosphat-Dehydrogenase-Mangel werden ausgeschlossen. Das primäre Ergebnis sind beatmungsfreie Tage innerhalb von 28 Beobachtungstagen. Dies ist eine der ersten klinischen Studien, in denen HIVC zur Behandlung von COVID-19 eingesetzt wird, und sie wird glaubwürdige Daten zur Wirksamkeit und Sicherheit liefern. Wir gehen davon aus, dass HIVC die durch COVID-19 verursachten Zytokinstürme unterdrücken, zur Verbesserung der Lungenfunktion beitragen und das ARDS-Risiko von COVID-19 verringern könnte.' 
-  tags:        [Zytokinstürme, Behandlung, Vitamin C]
+  tags:        [Zytokinsturm, Behandlung, Vitamin C]
 group:         'Treatments'
 credit:        https://doi.org/10.1136/bmjopen-2020-039519
 ---
