--- a/_studies/2020-10-20-10.1016_j.redox.2020.101764.md
+++ b/_studies/2020-10-20-10.1016_j.redox.2020.101764.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vorhersage der Überlebenschancen bei COVID-19 durch Zink, Alter und Selenoprotein P als zusammengesetzter Biomarker'
   description: 'SARS-CoV-2-Infektionen verursachen die aktuelle Coronavirus-Pandemie (COVID-19) und fordern das Immunsystem mit anhaltenden Entzündungen heraus. Bekannt ist, dass mehrere redoxrelevante Mikronährstoffe zu einer angemessenen Immunantwort beitragen, darunter die essenziellen Spurenelemente Zink (Zn) und Selen (Se). In dieser Studie haben wir die Hypothese getestet, dass COVID-19-Patienten durch einen Zn-Mangel gekennzeichnet sind und dass der Zn-Status prognostische Informationen liefert. Serum-Zn wurde in Serumproben (n = 171) bestimmt, die nacheinander von Patienten, die COVID-19 überlebten (n = 29), und von Nicht-Überlebenden (n = 6) gesammelt wurden. Zum Vergleich wurden Daten aus der European Prospective Investigation into Cancer and Nutrition (EPIC)-Studie herangezogen. Die Zn-Konzentrationen in Patientenproben waren im Vergleich zu gesunden Probanden niedrig. Die Mehrheit der zu verschiedenen Zeitpunkten entnommenen Serumproben der Nicht-Überlebenden (25/34, d. h. 73,5 %) und fast die Hälfte der von den Überlebenden entnommenen Proben (56/137, d. h. 40,9 %) lagen unter dem Schwellenwert für Zn-Mangel, d. h. unter 638,7 μg/L. Da der Se-Status-Biomarker und Se-Transporter Selenoprotein P (SELENOP) in COVID-19 ebenfalls besonders niedrig ist, haben wir die Prävalenz eines kombinierten Defizits, d. h. Serum-Zn unter 638,7 μg/L und Serum-SELENOP unter 2,56 mg/L, untersucht. Dieses kombinierte Defizit wurde bei 0,15 % der Proben in der EPIC-Kohorte gesunder Probanden, bei 19,7 % der Proben der überlebenden COVID-19-Patienten und bei 50,0 % der Proben der Nicht-Überlebenden beobachtet. Dementsprechend erwies sich der zusammengesetzte Biomarker (SELENOP und Zn in Abhängigkeit vom Alter) als zuverlässiger Indikator für das Überleben bei COVID-19. Die Analyse der Receiver-Operating-Characteristic (ROC)-Kurve ergab eine Fläche unter der Kurve (AUC) von 94,42 %. Wir kommen zu dem Schluss, dass ein Zn- und SELENOP-Status innerhalb der Referenzbereiche eine hohe Überlebenswahrscheinlichkeit bei COVID-19 anzeigt, und gehen davon aus, dass die Korrektur eines diagnostisch nachgewiesenen Defizits an Se und/oder Zn durch eine personalisierte Supplementierung die Rekonvaleszenz unterstützen kann.' 
-  tags:        [Spurenelement, Entzündung, Mikronährstoff, Biomarker]
+  tags:        [Spurenelement, Entzündung, Mikronährstoffe, Biomarker]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.redox.2020.101764
 ---
