--- a/_studies/2020-12-04-10.1016-j.nut.2020.111103.md
+++ b/_studies/2020-12-04-10.1016-j.nut.2020.111103.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Mikronährstoffe und bioaktive Substanzen: Ihre potenzielle Rolle bei der Bekämpfung von COVID-19'
   description: 'Die Pandemie der Coronavirus-Krankheit 2019 (COVID-19) bedroht ernsthaft die öffentliche Gesundheit und löst weltweit enorme Wirtschaftskrisen aus. Da es keine spezifischen Medikamente für COVID-19 gibt, muss dringend nach alternativen Ansätzen gesucht werden. Ziel dieser Arbeit war es daher, die Rolle von Mikronährstoffen und bioaktiven Substanzen als mögliche alternative Ansätze zur Bekämpfung von COVID-19 zu untersuchen. Diese Übersicht basiert auf der Literatur, die durch elektronische Recherchen in verschiedenen Datenbanken ermittelt wurde. Vitamine (A, B, C, D und E), Mineralien (Selen und Zink) und bioaktive Substanzen aus Curcumin, Echinacea, Propolis, Knoblauch, Sojabohnen, grünem Tee und anderen Polyphenolen wurden als potenzielle Faktoren für die Beeinflussung von Spike-Glykoproteinen ermittelt, Angiotensin Converting Enzyme 2 und die Transmembranprotease Serin 2 an der Eintrittsstelle sowie die Hemmung der Aktivitäten der Papain-ähnlichen Protease, der Chymotrypsin-ähnlichen Protease und der RNA-abhängigen RNA-Polymerase im Replikationszyklus des schweren akuten respiratorischen Syndroms Coronavirus 2. Aufgrund ihrer immunmodulierenden, entzündungshemmenden, antioxidativen und antiviralen Eigenschaften sind solche Mikronährstoffe und bioaktiven Substanzen folglich vielversprechende alternative Ernährungsansätze zur Bekämpfung von COVID-19. Die Rolle von Mikronährstoffen und bioaktiven Substanzen bei der Bekämpfung von COVID-19 ist ein spannendes Forschungsgebiet. Diese Übersicht kann Hinweise für weitere Studien geben.' 
-  tags:        [Zytokinstürme, Lungenschäden, Mikronährstoffe, Bioaktive Substanzen]
+  tags:        [Zytokinsturm, Lungenschäden, Mikronährstoffe, Bioaktive Substanzen]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.nut.2020.111103
 ---
