--- a/_studies/2021-03-08-10.3389_fimmu.2021.648546.md
+++ b/_studies/2021-03-08-10.3389_fimmu.2021.648546.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vitamin D bei der Corona-Virus-Krankheit 2019 (COVID-19) und dem damit verbundenen Multisystem-Entzündungssyndrom bei Kindern (MIS-C)'
   description: 'Das Multisystem-Entzündungssyndrom bei Kindern (MIS-C) ist eine seltene, aber verheerende Komplikation der Coronavirus-Krankheit 19 (COVID-19). Die Entwicklung von prognostischen Biomarkern und, was noch wichtiger ist, die Einführung neuer Behandlungsmodalitäten würde sich in der klinischen Praxis erheblich auf den Ausgang von MIS-C auswirken. Vitamin D könnte ein potenzieller Kandidat sein. In diesem Mini-Review analysieren wir die immunmodulatorische Rolle von Vitamin D bei Virusinfektionen und speziell bei COVID-19. Außerdem untersuchen wir die aktuelle Literatur über den Zusammenhang zwischen Vitamin D und MIS-C sowie der Kawasaki-Krankheit. Das Vitamin D wurde nicht nur als Biomarker, sondern auch als Nahrungsergänzungsmittel bewertet. Wir kamen zu dem Schluss, dass der Vitamin-D-Spiegel bei der Vorhersage schwerer Formen von MIS-C wertvoll sein könnte und dass die Korrektur abnormaler Werte bei schwerem MIS-C dessen Entwicklung beeinflussen kann. Eine Supplementierung mit 25-Hydroxyvitamin D3 [25(OH)D3], die die [25(OH)D]-Konzentration im Serum erhöht, könnte sich unter bestimmten Umständen günstig auf die Verringerung des Schweregrads von MIS-C auswirken. Weitere Studien sind erforderlich, um diese Ergebnisse zu bestätigen.' 
-  tags:        [Vitamin D, 25(OH)D3, SARS-CoV-2-Infektion, Multisystem, Kawasaki-ähnliches Syndrom]
+  tags:        [Vitamin D, 25(OH)D3, Infektion, Multisystem, Kawasaki-ähnliches Syndrom]
 group:         'Treatments'
 credit:        https://doi.org/10.3389/fimmu.2021.648546
 ---
