--- a/_studies/2021-03-31-10.1007_s40475-021-00236-3.md
+++ b/_studies/2021-03-31-10.1007_s40475-021-00236-3.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vitamin-D-Status: Kann er das Infektionsrisiko und den Schweregrad der COVID-19-Symptome beeinflussen?'
   description: 'Inmitten der COVID-19-Pandemie sind mehrere wissenschaftliche Studien entstanden, die die Bedeutung von Vitamin D bei der Entwicklung der SARS-CoV2-Infektion untersuchen. Der Grund für dieses Interesse liegt in den nachgewiesenen Auswirkungen des Vitamin-D-Status auf andere akute Atemwegsinfektionen, wie z. B. die Grippe. Ziel dieses Artikels ist es, die Rolle und den Einfluss der Vitamin-D-Serumkonzentration auf die Prävalenz und den Schweregrad von COVID-19 zu bestimmen. Mehrere Beobachtungsstudien haben gezeigt, dass suboptimale Vitamin-D-Serumkonzentrationen das Risiko, an COVID-19 zu erkranken, deutlich erhöhen und zu einer schwereren Symptomatik führen können. Eine Studie deutet jedoch darauf hin, dass eine Vitamin-D-Supplementierung möglicherweise die Sterblichkeitsrate bei COVID-19-Patienten erhöhen könnte. Der Vitamin-D-Status könnte eine wichtige Rolle bei der Entstehung und dem Verlauf der SARS-CoV2-Infektion spielen. Weitere Studien sind erforderlich, um den Wahrheitsgehalt und das Ausmaß dieses Zusammenhangs vollständig zu verstehen.' 
-  tags:        [Vitamin D, SARS-CoV-2-Infektion, Vitamin D-Mangel, 25(OH)D3, COVID-19-Schweregrad]
+  tags:        [Vitamin D, Infektion, Vitamin D-Mangel, 25(OH)D3, COVID-19-Schweregrad]
 group:         'Treatments'
 credit:        https://doi.org/10.1007/s40475-021-00236-3
 ---
