--- a/_studies/2021-04-21-10.1056_NEJMoa2104983.md
+++ b/_studies/2021-04-21-10.1056_NEJMoa2104983.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vorläufige Ergebnisse zur Sicherheit des mRNA-Impfstoffs Covid-19 bei Schwangeren'
   description: 'Viele schwangere Personen in den Vereinigten Staaten erhalten Impfstoffe gegen Coronavirus-Krankheit 2019 (Covid-19) mit Boten-RNA (mRNA), aber es gibt nur wenige Daten über ihre Sicherheit in der Schwangerschaft. Vom 14. Dezember 2020 bis zum 28. Februar 2021 haben wir Daten aus dem Überwachungssystem "v-safe after vaccination health checker", dem v-safe-Schwangerschaftsregister und dem Vaccine Adverse Event Reporting System (VAERS) verwendet, um die anfängliche Sicherheit von mRNA-Covid-19-Impfstoffen bei Schwangeren zu charakterisieren. Insgesamt 35.691 v-safe-Teilnehmerinnen im Alter von 16 bis 54 Jahren gaben an, schwanger zu sein. Schmerzen an der Injektionsstelle wurden bei Schwangeren häufiger gemeldet als bei Nicht-Schwangeren, während Kopfschmerzen, Myalgien, Schüttelfrost und Fieber seltener auftraten. Von den 3958 Teilnehmerinnen, die in das v-safe-Schwangerschaftsregister aufgenommen wurden, hatten 827 eine vollendete Schwangerschaft, von denen 115 (13,9 %) Schwangerschaftsverluste und 712 (86,1 %) Lebendgeburten waren (meist bei Teilnehmerinnen, die im dritten Trimester geimpft wurden). Zu den unerwünschten neonatalen Ergebnissen gehörten Frühgeburten (bei 9,4 %) und eine geringe Größe im Verhältnis zum Gestationsalter (bei 3,2 %); es wurden keine neonatalen Todesfälle gemeldet. Obwohl nicht direkt vergleichbar, waren die berechneten Anteile unerwünschter Schwangerschafts- und Neugeborenenereignisse bei Personen, die gegen Covid-19 geimpft wurden und eine abgeschlossene Schwangerschaft hatten, ähnlich hoch wie in Studien mit schwangeren Frauen, die vor der Covid-19-Pandemie durchgeführt worden waren. Unter den 221 schwangerschaftsbedingten unerwünschten Ereignissen, die dem VAERS gemeldet wurden, war der Spontanabort das am häufigsten gemeldete Ereignis (46 Fälle). Vorläufige Ergebnisse zeigten keine offensichtlichen Sicherheitssignale bei schwangeren Personen, die mRNA-Covid-19-Impfstoffe erhielten. Es sind jedoch weitere Längsschnittuntersuchungen erforderlich, einschließlich der Beobachtung einer großen Anzahl von Frauen, die zu einem früheren Zeitpunkt in der Schwangerschaft geimpft wurden, um Informationen über die Ergebnisse für Mütter, Schwangere und Säuglinge zu erhalten.' 
-  tags:        [mRNA, Coronavirus-Krankheit 2019, mRNA Covid-19 Impfstoffe Sicherheit, Schwangere]
+  tags:        [mRNA, Coronavirus-Krankheit 2019, Impfstoffe, Sicherheit, Schwangere]
 group:         'Vaccines'
 credit:        https://doi.org/10.1056/NEJMoa2104983
 ---
