--- a/_studies/2021-05-31-10.3390_nu13061898.md
+++ b/_studies/2021-05-31-10.3390_nu13061898.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Zusammenhang zwischen Serum-Kupferstatus und Überleben bei COVID-19'
   description: 'Das Spurenelement Kupfer (Cu) ist Teil unserer Ernährung und wird für verschiedene Cuproenzyme benötigt, die den Redoxstatus kontrollieren und das Immunsystem unterstützen. Im Blut macht die Ferroxidase Ceruloplasmin (CP) den Großteil des zirkulierenden Kupfers aus und dient als Transportprotein. Sowohl Cu als auch CP verhalten sich positiv, während Serumselen (Se) und sein Transporter Selenoprotein P (SELENOP) sich als negative Akute-Phase-Reaktanten verhalten. Angesichts der Tatsache, dass die Coronavirus-Erkrankung (COVID-19) eine systemische Entzündung hervorruft, stellten wir die Hypothese auf, dass die Biomarker für den Cu- und Se-Status in umgekehrter Weise reguliert werden, und zwar in Bezug auf den Schweregrad der Erkrankung und das Sterberisiko. Serumproben von COVID-19-Patienten wurden mittels Totalreflexions-Röntgenfluoreszenz auf Cu untersucht und CP wurde mit einem validierten Sandwich-ELISA quantifiziert. Die beiden Cu-Biomarker korrelierten im Serum von Patienten mit COVID-19 positiv. Überlebende Patienten wiesen im Vergleich zu Nicht-Überlebenden höhere mittlere Serum-Cu- und CP-Konzentrationen auf. Entgegen den Erwartungen wiesen die Gesamt-Cu- und Se-Konzentrationen im Serum der untersuchten Patientenproben eine positive lineare Korrelation auf. Die Serum-CP- und SELENOP-Konzentrationen waren nicht miteinander korreliert. Bei der Analyse der Receiver-Operating-Characteristics-Kurve (ROC-Kurve) übertraf die Kombination von Cu und SELENOP mit dem Alter die anderen Parameterkombinationen bei der Vorhersage des Sterberisikos. Wir kommen zu dem Schluss, dass die Veränderungen der Serum-Biomarker für den Cu- und Se-Status bei COVID-19 nicht mit einer einfachen Akute-Phase-Reaktion vereinbar sind und dass die Serum-Cu- und SELENOP-Spiegel zu einer guten Vorhersage des Überlebens beitragen. Eine adjuvante Supplementierung bei Patienten mit diagnostisch nachgewiesenen Cu- oder Se-Defiziten könnte den Krankheitsverlauf positiv beeinflussen, da beide bei Überlebenden ansteigen und von entscheidender Bedeutung für die Immunantwort und die antioxidativen Abwehrsysteme sind.' 
-  tags:        [Spurenelement, Entzündung, Ceruloplasmin, Mikronährstoff]
+  tags:        [Spurenelement, Entzündung, Ceruloplasmin, Mikronährstoffe]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu13061898
 ---
