--- a/_studies/2021-07-09-10.1177_20451253211027699.md
+++ b/_studies/2021-07-09-10.1177_20451253211027699.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vitamin D in der Zeit der Coronavirus-Pandemie (COVID-19) - eine klinische Untersuchung aus der Sicht der öffentlichen Gesundheit und der öffentlichen psychischen Gesundheit'
   description: 'Personen mit schweren psychischen Störungen (SMD) haben ein höheres Risiko für einen Vitamin-D-Mangel (VIT-D). Sie haben auch ein höheres Sterberisiko aufgrund einer Infektion mit dem Coronavirus 2019 (COVID-19). Daher haben wir eine umfassende Untersuchung durchgeführt, um die Bedeutung von VIT-D für die öffentliche Gesundheit und die psychische Gesundheit der Bevölkerung während der laufenden COVID-19-Pandemie zu untersuchen. Diese Übersichtsarbeit verfolgte drei spezifische Ziele: (a) Erstellung eines Profils von VIT-D und Überprüfung der Epidemiologie des VIT-D-Mangels, (b) Untersuchung des VIT-D-Mangels als Risikofaktor für SMD- und COVID-19-Infektionen und (c) Untersuchung der Wirksamkeit der VIT-D-Supplementierung bei beiden Erkrankungen. Wir stellten fest, dass die Erkenntnisse aus Labor- und Beobachtungsstudien in Bezug auf SMD auf einen gewissen Zusammenhang zwischen VIT-D-Mangel und Depression oder Schizophrenie hindeuten. Mendelsche Randomisierungsstudien lassen jedoch keine oder eine umgekehrte Kausalität vermuten. Die Erkenntnisse aus Interventionsstudien sind widersprüchlich. Was die COVID-19-Infektion betrifft, so könnte VIT-D, wenn man den Grundsatzbeweis erbringt, einen plausiblen Schutz gegen die Infektion selbst und gegen einen ungünstigen klinischen Verlauf bieten. Die Daten aus Beobachtungsstudien und den ersten vorläufigen Interventionsstudien sind jedoch nach wie vor widersprüchlich, wobei es stärkere Hinweise darauf gibt, dass VIT-D eher den klinischen Verlauf einer COVID-19-Infektion als das Risiko einer Infektion abmildern kann. Aus der Sicht der öffentlichen Gesundheit und der öffentlichen psychischen Gesundheit scheinen auf der Grundlage des derzeit begrenzten Wissensstandes bei Personen mit SMD die Vorteile einer VIT-D-Optimierung durch Supplementierung die Risiken zu überwiegen. Die VIT-D-Supplementierung sollte jedoch nicht als Ersatz für eine Impfung oder medizinische Behandlung einer COVID-19-Infektion dienen.' 
-  tags:        [psychische Störung, psychische Gesundheit, Meta-Analyse, öffentliche Gesundheit, Supplementierung, Vitamin D]
+  tags:        [Psychische Störung, Psychische Gesundheit, Meta-Analyse, Öffentliche Gesundheit, Supplementierung, Vitamin D]
 group:         'Treatments'
 credit:        https://doi.org/10.1177/20451253211027699
 ---
