--- a/_studies/2021-07-14-10.1016_j.xcrm.2021.100354.md
+++ b/_studies/2021-07-14-10.1016_j.xcrm.2021.100354.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Längsschnittanalyse zeigt dauerhaftes und breites Immungedächtnis nach SARS-CoV-2-Infektion mit anhaltenden Antikörperantworten und Gedächtnis-B- und T-Zellen'
   description: 'Um die COVID-19-Pandemie zu beenden, ist eine lang anhaltende Immunität gegen SARS-CoV-2 erforderlich. Wir haben 254 COVID-19-Patienten über einen Zeitraum von bis zu 8 Monaten untersucht und eine dauerhafte, breit angelegte Immunantwort festgestellt. SARS-CoV-2-Spike-bindende und neutralisierende Antikörper zeigen einen zweiphasigen Zerfall mit einer verlängerten Halbwertszeit von >200 Tagen, was auf die Bildung langlebiger Plasmazellen schließen lässt. Eine SARS-CoV-2-Infektion erhöht auch die Antikörpertiter gegen SARS-CoV-1 und gewöhnliche Betacoronaviren. Darüber hinaus persistieren Spike-spezifische IgG+-Gedächtnis-B-Zellen, was eine schnelle Antikörperreaktion bei erneuter Virusexposition oder Impfung erwarten lässt. Virusspezifische CD4+ und CD8+ T-Zellen sind polyfunktional und bleiben mit einer geschätzten Halbwertszeit von 200 Tagen erhalten. Interessanterweise richten sich die Antworten der CD4+ T-Zellen gleichermaßen gegen mehrere SARS-CoV-2-Proteine, während die Antworten der CD8+ T-Zellen vorzugsweise gegen das Nukleoprotein gerichtet sind, was die potenzielle Bedeutung der Aufnahme des Nukleoproteins in künftige Impfstoffe unterstreicht. Zusammengenommen deuten diese Ergebnisse darauf hin, dass eine breite und wirksame Immunität bei genesenen COVID-19-Patienten langfristig bestehen bleiben kann.' 
-  tags:        [Coronaviren, CD4 T-Zellen, CD8 T-Zellen, B-Zellen, Immungedächtnis, neutralisierende Antikörper, bindende Antikörper, Immunkorrelate]
+  tags:        [Coronaviren, CD4 T-Zellen, CD8 T-Zellen, B-Zellen, Immungedächtnis, Neutralisierende Antikörper, Bindende Antikörper, Immunkorrelate]
 group:         'Immunity'
 credit:        https://doi.org/10.1016/j.xcrm.2021.100354
 ---
