--- a/_studies/2021-08-20-10.3390_ijms22168988.md
+++ b/_studies/2021-08-20-10.3390_ijms22168988.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Mögliche Rolle von Vitamin D bei der COVID-19-Impfung'
   description: 'Das Coronavirus 2 des Schweren Akuten Respiratorischen Syndroms ist ein neues, hoch pathogenes Virus, das vor kurzem eine globale Pandemie mit der Bezeichnung Coronavirus-Krankheit 2019 (COVID-19) ausgelöst hat. COVID-19 ist durch eine erhebliche Störung des Immunsystems gekennzeichnet, die durch eine starke, aber unregulierte angeborene Immunität und eine schwache adaptive Immunität verursacht wird. Eine verminderte und verzögerte Reaktion auf Interferone (IFN-I/IFN-III) kann die Synthese proinflammatorischer Zytokine und eine ausgedehnte Infiltration der Atemwege durch Immunzellen erhöhen, was zu einer Lungenerkrankung führt. Die Entwicklung wirksamer Behandlungen für schwere COVID-19-Patienten hängt von unserem Wissen über die pathophysiologischen Komponenten dieser unausgewogenen angeborenen Immunantwort ab. Strategien, die auf die Faktoren der angeborenen Reaktion abzielen, werden von entscheidender Bedeutung sein. Derzeit werden erhebliche Anstrengungen unternommen, um Impfstoffe gegen SARS-CoV-2 zu entwickeln. COVID-19-Impfstoffe, wie z. B. inaktivierte DNA-, mRNA- und Protein-Untereinheiten-Impfstoffe, wurden bereits klinisch eingesetzt. Die verschiedenen Impfstoffe sind unterschiedlich wirksam, und es ist wichtig, ihre Zusammensetzung weiter zu optimieren und zu aktualisieren, um ihre Wirksamkeit zu erhöhen. Da jedoch ständig neue Virusvarianten auftauchen, kann eine Verbesserung der Immunität der Bevölkerung auch die Wirksamkeit der Impfstoffe erhöhen. Zahlreiche Beobachtungsstudien haben gezeigt, dass der Vitamin-D-Serumspiegel umgekehrt mit dem Auftreten oder dem Schweregrad von COVID-19 korreliert. Es gibt umfangreiche Belege dafür, dass eine Vitamin-D-Supplementierung entscheidend dazu beitragen könnte, das Fortschreiten von COVID-19 abzuschwächen und den Schweregrad der Erkrankung zu verringern. Vitamin D schützt vor SARS-CoV-2 über einen komplexen Mechanismus durch Wechselwirkungen zwischen der Modulation der angeborenen und adaptiven Immunreaktionen, der ACE2-Expression und der Hemmung des Renin-Angiotensin-Systems (RAS). Es bleibt jedoch unklar, ob Vit-D auch eine wichtige Rolle bei der Wirksamkeit der verschiedenen COVID-19-Impfstoffe spielt. Auf der Grundlage der Analyse der beteiligten molekularen Mechanismen spekulieren wir, dass Vit-D über verschiedene Immun-Signalwege eine ergänzende Rolle bei der Entwicklung der Impfstoffwirksamkeit spielt.' 
-  tags:        [adaptive Immunität, angeborene Immunität, Vitamin D, Impfstoffe]
+  tags:        [Adaptive Immunität, Angeborene Immunität, Vitamin D, Impfstoffe]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/ijms22168988
 ---
