--- a/_studies/2021-09-04-10.3389_fnut.2020.00164.md
+++ b/_studies/2021-09-04-10.3389_fnut.2020.00164.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Wechselwirkungen zwischen Selen und RNA-Viren: Mögliche Auswirkungen auf die SARS-CoV-2-Infektion (COVID-19)'
   description: 'SARS-CoV-2 ist ein RNA-Virus, das für die COVID-19-Pandemie verantwortlich ist, die bis zum 23. Mai 2020 weltweit bereits mehr als 340.000 Todesopfer gefordert hat, von denen die meisten ältere Menschen sind. Selen (Se), ein natürliches Spurenelement, spielt eine wichtige und komplexe Rolle für das Immunsystem. Es ist gut dokumentiert, dass Se-Mangel mit einer höheren Anfälligkeit für RNA-Virusinfektionen und einem schwereren Krankheitsverlauf verbunden ist. In diesem Artikel präsentieren wir zunächst Belege dafür, wie Se-Mangel Mutationen, Replikation und Virulenz von RNA-Viren fördert. Anschließend wird untersucht, wie Se durch die Wiederherstellung der antioxidativen Kapazität des Wirts, die Verringerung der Apoptose und der Schädigung der Endothelzellen sowie der Thrombozytenaggregation von Nutzen sein könnte. Es zeigt sich auch, dass ein niedriger Se-Status ein häufiger Befund bei Erkrankungen ist, die als Risiko für schwere COVID-19 gelten, insbesondere bei älteren Menschen. Schließlich stellen wir eine Begründung für den Einsatz von Se in verschiedenen Stadien von COVID-19 vor. Se wurde bisher übersehen, könnte aber einen wichtigen Platz im Management des COVID-19-Spektrums einnehmen, insbesondere bei gefährdeten älteren Menschen, und könnte einen Wendepunkt in der globalen Antwort auf COVID-19 darstellen.' 
-  tags:        [RNA-Virus, ältere Menschen, Fettleibigkeit, oxidativer Stress, Selen, Thioredoxin-Reduktase]
+  tags:        [RNA-Virus, Ältere Menschen, Fettleibigkeit, Oxidativer Stress, Selen, Thioredoxin-Reduktase]
 group:         'Treatments'
 credit:        https://doi.org/10.3389/fnut.2020.00164
 ---
