--- a/_studies/2021-09-07-10.3389_fnut.2021.674258.md
+++ b/_studies/2021-09-07-10.3389_fnut.2021.674258.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die immunmodulatorische Rolle von Nährstoffen: Wie können sich Lungenfunktionsstörungen verbessern?'
   description: 'Die Ernährung ist ein wichtiges Instrument, mit dem die Immunantwort bei Infektionskrankheiten moduliert werden kann. Darüber hinaus werden über die Ernährung wichtige Substrate für die Biosynthese von regulatorischen Molekülen der Immunantwort erworben, die den Verlauf und die Behandlung chronischer Lungenerkrankungen wie Asthma und chronisch obstruktiver Lungenerkrankung (COPD) beeinflussen. Auf diese Weise kann die Ernährung den Gesundheitsstatus der Lunge fördern. Eine Reihe von Nährstoffen wie Vitamine (A, C, D und E), Mineralstoffe (Zink, Selen, Eisen und Magnesium), Flavonoide und Fettsäuren spielen eine wichtige Rolle bei der Verringerung des Risikos von chronischen Lungenerkrankungen und Virusinfektionen. Durch ihre antioxidative und entzündungshemmende Wirkung werden die Nährstoffe mit einer besseren Lungenfunktion und einem geringeren Risiko für Komplikationen in Verbindung gebracht, da sie die schädlichen Auswirkungen des Immunsystems während der Entzündungsreaktion verringern können. Darüber hinaus können bioaktive Verbindungen sogar zu epigenetischen Veränderungen beitragen, einschließlich Histon-Deacetylase (HDAC)-Modifikationen, die die Transkription von proinflammatorischen Zytokinen hemmen, was zur Aufrechterhaltung der Homöostase im Zusammenhang mit Infektionen und chronischen Entzündungskrankheiten beitragen kann. Diese Nährstoffe spielen auch eine wichtige Rolle bei der Aktivierung von Immunreaktionen gegen Krankheitserreger, was das Immunsystem bei Infektionen unterstützen kann. Hier geben wir einen aktuellen Überblick über die Rolle von Ernährungsfaktoren und wie sie die Gesundheit der Atemwege beeinflussen können. Daher werden wir die entzündungshemmende Rolle von Flavonoiden, Fettsäuren, Vitaminen und der Mikrobiota aufzeigen, die für die Kontrolle von chronischen Entzündungskrankheiten und Allergien wichtig sind, sowie die antivirale Rolle von Vitaminen, Flavonoiden und Mineralien bei Virusinfektionen der Lunge, wobei wir auf die Mechanismen eingehen, die an jeder Funktion beteiligt sind. Diese Mechanismen sind für die Erörterung der Perspektiven im Zusammenhang mit der Infektion mit dem schweren akuten respiratorischen Syndrom Coronavirus 2 (SARS-CoV-2) und seinen pulmonalen Komplikationen interessant, da Patienten mit einer schweren Erkrankung einen Mangel an Vitaminen, insbesondere an Vitamin D, aufweisen. Auf diese Weise kann ein umfassendes Verständnis der Ernährungseinflüsse die Lungengesundheit der Patienten verbessern.' 
-  tags:        [COPD, SARS-CoV-2-Infektion, Asthma, Lungengesundheit, Nährstoffe, chronische Lungenkrankheiten]
+  tags:        [COPD, Infektion, Asthma, Lungengesundheit, Nährstoffe, chronische Lungenkrankheiten]
 group:         'Treatments'
 credit:        https://doi.org/10.3389/fnut.2021.674258
 ---
