--- a/_studies/2021-10-28-10.37184_lnjpc.2707-3521.3.20.md
+++ b/_studies/2021-10-28-10.37184_lnjpc.2707-3521.3.20.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vitamin E und Immunsystem: Ein schützender Nährstoff gegen Influenza und COVID-19 bei älteren Menschen'
   description: 'Ältere Erwachsene haben ein relativ schwaches Immun- und Antioxidationssystem und sind daher anfälliger für Virusinfektionen, insbesondere Infektionen der Atemwege, als jüngere Erwachsene. Jüngste Berichte über eine hohe Sterblichkeitsrate aufgrund der Coronavirus-Krankheit 2019 (COVID-19) in der älteren Bevölkerung lassen vermuten, dass möglicherweise ein beeinträchtigter Antioxidantienstatus zu einer erhöhten Virulenz bei älteren Menschen beiträgt. Da Vitamin-E-Insuffizienz im Alter häufig vorkommt, ist es denkbar, dass ein niedriger Vitamin-E-Status zu den Faktoren gehört, die eine hohe Sterblichkeitsrate bei älteren Menschen verursachen, die an Influenza und COVID-19-Infektionen leiden. Jüngste Studien haben gezeigt, dass die zusätzliche Gabe von Vitamin E zusammen mit anderen Antioxidantien das Immunsystem gegen Virusinfektionen der Atemwege stärkt. Ziel dieser Übersichtsarbeit ist es daher, die Daten zu den Auswirkungen von Vitamin E auf die Stärkung der Immunantwort gegen Virusinfektionen der Atemwege wie Influenza und COVID-19 bei älteren Menschen zu untersuchen und zu diskutieren.' 
-  tags:        [Vitamin-E-Supplementierung, ältere Menschen, Antioxidantienstatus, Immunsystem, Atemwegsinfektionen, Influenza]
+  tags:        [Vitamin-E-Supplementierung, Ältere Menschen, Antioxidantienstatus, Immunsystem, Atemwegsinfektionen, Influenza]
 group:         'Treatments'
 credit:        https://doi.org/10.37184/lnjpc.2707-3521.3.20
 ---
