--- a/_studies/2021-11-20-10.1016_S0140-6736(21)02243-1.md
+++ b/_studies/2021-11-20-10.1016_S0140-6736(21)02243-1.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'COVID-19: Stigmatisierung der Ungeimpften ist nicht gerechtfertigt'
   description: 'Abstract: In den USA und in Deutschland haben hochrangige Beamte den Begriff "Pandemie der Ungeimpften" verwendet und damit angedeutet, dass Menschen, die geimpft wurden, für die Epidemiologie von COVID-19 nicht relevant sind. Die Verwendung dieses Begriffs durch Beamte könnte einen Wissenschaftler zu der Behauptung veranlasst haben, dass "die Ungeimpften die Geimpften mit COVID-19 bedrohen". Doch diese Sichtweise ist viel zu einfach. Es gibt immer mehr Hinweise darauf, dass geimpfte Personen weiterhin eine wichtige Rolle bei der Übertragung spielen. In Massachusetts, USA, wurden im Juli 2021 bei verschiedenen Ereignissen insgesamt 469 neue COVID-19-Fälle festgestellt. 346 (74 %) dieser Fälle traten bei Personen auf, die ganz oder teilweise geimpft waren, 274 (79 %) davon waren symptomatisch. Die Schwellenwerte für den Zyklus waren bei vollständig geimpften Personen (Median 22-8) und ungeimpften, nicht vollständig geimpften oder Personen mit unbekanntem Impfstatus (Median 21-5) ähnlich niedrig, was auf eine hohe Viruslast auch bei vollständig geimpften Personen hinweist. In den USA wurden bis zum 30. April 2021 insgesamt 10 262 COVID-19-Fälle bei geimpften Personen gemeldet, von denen 2725 (26-6%) asymptomatisch waren, 995 (9-7%) ins Krankenhaus eingeliefert wurden und 160 (1-6%) starben. In Deutschland waren 55-4 % der symptomatischen COVID-19-Fälle bei Patienten im Alter von 60 Jahren oder älter bei vollständig geimpften Personen aufgetreten, und dieser Anteil nimmt jede Woche zu. In Münster, Deutschland, traten neue Fälle von COVID-19 bei mindestens 85 (22 %) von 380 Personen auf, die vollständig geimpft waren oder sich von COVID-19 erholt hatten und eine Diskothek besuchten. Geimpfte Personen haben ein geringeres Risiko einer schweren Erkrankung, sind aber immer noch ein relevanter Teil der Pandemie. Es ist daher falsch und gefährlich, von einer Pandemie der Ungeimpften zu sprechen. In der Vergangenheit haben sowohl die USA als auch Deutschland negative Erfahrungen mit der Stigmatisierung von Teilen der Bevölkerung aufgrund ihrer Hautfarbe oder Religion gemacht. Ich fordere hochrangige Beamte und Wissenschaftler auf, die unangemessene Stigmatisierung von Ungeimpften, zu denen unsere Patienten, Kollegen und andere Mitbürger gehören, zu beenden und zusätzliche Anstrengungen zu unternehmen, um die Gesellschaft zusammenzuführen.' 
-  tags:        [Stigmatisierung, Ungeimpfte, Geimpfte, Rolle bei der Übertragung]
+  tags:        [Stigmatisierung, Ungeimpft, Geimpft, Rolle bei der Übertragung]
 group:         'Vaccines'
 credit:        https://doi.org/10.1016/S0140-6736(21)02243-1
 ---
