--- a/_studies/2021-11-27-10.1007_s12011-021-03045-x.md
+++ b/_studies/2021-11-27-10.1007_s12011-021-03045-x.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Positive Auswirkungen von Vitaminen, Mineralien und bioaktiven Peptiden auf die Stärkung des Immunsystems gegen COVID-19 und die Rolle der Kuhmilch bei der Versorgung mit diesen Nährstoffen'
   description: 'Die COVID-19-Pandemie, die schwere Atemwegsinfektionen beim Menschen verursacht, ist zu einem globalen Gesundheitsproblem geworden und breitet sich rasch aus. Das wichtigste Thema im Zusammenhang mit COVID-19 sind derzeit das Immunsystem und die Faktoren, die es beeinflussen. Es ist bekannt, dass Kuhmilch sehr reich an Mikronährstoffen ist, die das Immunsystem steigern und stärken. Die Forschung zeigt, dass die Verabreichung dieser Nährstoffe sehr wirksam bei der Bekämpfung von COVID-19 ist, und ein Mangel an einem dieser Nährstoffe kann eine Schwäche im Kampf gegen das Virus darstellen. Andererseits ist Kuhmilch für die gesamte Bevölkerung zugänglich, und der Verzehr von Kolostrum, Rohmilch und mikrogefilterter Milch von Kühen, die gegen SARS-CoV-2 geimpft wurden, könnte den Menschen einen kurzfristigen Schutz gegen die SARS-CoV-2-Infektion bieten, bis Impfstoffe auf dem Markt erhältlich sind. Ziel dieser Übersichtsarbeit war es, die Auswirkungen von Vitaminen, Mineralien und bioaktiven Peptiden aus der Milch auf die allgemeine Gesundheit des Menschen zu erörtern, um Viruskrankheiten, insbesondere COVID-19, zu bekämpfen, und zu untersuchen, inwieweit der Verzehr von Kuhmilch bei der Bereitstellung dieser Stoffwechselprodukte eine Rolle spielt. Kuhmilch enthält viele bioaktive Verbindungen, darunter Vitamine, Mineralstoffe, biogene Amine, Nukleotide, Oligosaccharide, organische Säuren und Immunglobuline. Der Mensch kann einen erheblichen Teil seines Bedarfs an Vitaminen und Mineralstoffen durch den Verzehr von Kuhmilch decken. Jüngste Studien haben gezeigt, dass Mikronährstoffe wie die Vitamine D, E, B, C und A sowie die Mineralstoffe Zn, Cu, Mg, I und Se und bioaktive Peptide jeweils positive und signifikante Auswirkungen auf die Stärkung des Immunsystems und die allgemeine Gesundheit des Menschen haben können.' 
-  tags:        [Kuhmilch, Immunsystem, Mineral, Vitamin]
+  tags:        [Kuhmilch, Immunsystem, Minerale, Vitamin]
 group:         'Treatments'
 credit:        https://doi.org/10.1007/s12011-021-03045-x
 ---
