--- a/_studies/2021-12-09-10.1056_NEJMoa2114583.md
+++ b/_studies/2021-12-09-10.1056_NEJMoa2114583.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Abnehmende humorale Immunantwort auf BNT162b2 Covid-19-Impfstoff über 6 Monate'
   description: 'Trotz der hohen Durchimpfungsrate und Wirksamkeit des Impfstoffs hat die Inzidenz symptomatischer Infektionen mit dem schweren akuten respiratorischen Syndrom Coronavirus 2 (SARS-CoV-2) in Israel zugenommen. Es ist unklar, ob die zunehmende Inzidenz von Infektionen auf eine nachlassende Immunität nach der Verabreichung von zwei Dosen des BNT162b2-Impfstoffs zurückzuführen ist. Wir führten eine 6-monatige prospektive Längsschnittstudie mit geimpftem Gesundheitspersonal durch, das monatlich auf das Vorhandensein von Anti-Spike-IgG und neutralisierenden Antikörpern getestet wurde. Mit Hilfe linearer gemischter Modelle wurden die Dynamik der Antikörperspiegel bewertet und die Prädiktoren für die Antikörperspiegel nach 6 Monaten bestimmt. Die Studie umfasste 4868 Teilnehmer, von denen 3808 in die Analysen des linearen gemischten Modells einbezogen wurden. Die IgG-Antikörperspiegel nahmen gleichmäßig ab, während die neutralisierenden Antikörperspiegel in den ersten drei Monaten rasch und danach relativ langsam abnahmen. Obwohl die IgG-Antikörperspiegel stark mit den neutralisierenden Antikörpertitern korrelierten, hing die Regressionsbeziehung zwischen den IgG- und neutralisierenden Antikörperspiegeln von der Zeit seit der zweiten Impfstoffdosis ab. Sechs Monate nach Erhalt der zweiten Dosis waren die neutralisierenden Antikörpertiter bei Männern deutlich niedriger als bei Frauen, bei Personen im Alter von 65 Jahren oder älter niedriger als bei Personen im Alter von 18 bis unter 45 Jahren und bei Teilnehmern mit Immunsuppression niedriger als bei Teilnehmern ohne Immunsuppression. Sechs Monate nach Erhalt der zweiten Dosis des BNT162b2-Impfstoffs war die humorale Reaktion deutlich vermindert, insbesondere bei Männern, bei Personen im Alter von 65 Jahren oder älter und bei Personen mit Immunsuppression.' 
-  tags:        [Anti-Spike-IgG, neutralisierende Antikörper, Antikörper-Titer]
+  tags:        [Anti-Spike-IgG, Neutralisierende Antikörper, Antikörper-Titer]
 group:         'Vaccines'
 credit:        https://doi.org/10.1056/NEJMoa2114583
 ---
