--- a/_studies/2021-12-16-10.1056-NEJMoa2116044.md
+++ b/_studies/2021-12-16-10.1056-NEJMoa2116044.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Molnupiravir bei ungeimpften Patienten mit COVID-19'
   description: 'Molnupiravir ist ein Prodrug von N-Hydroxycytidin, das gegen RNA-Viren einschließlich SARS-CoV-2 wirksam ist. Molnupiravir wurde bei nicht hospitalisierten, ungeimpften Erwachsenen mit leichter bis mittelschwerer COVID-19-Erkrankung und mindestens einem Risikofaktor für eine schwere COVID-19-Erkrankung mit Placebo verglichen. Die Behandlung mit oralem Molnupiravir innerhalb von 5 Tagen nach Beginn der Symptome verringerte das Risiko einer Krankenhauseinweisung oder des Todes. Die vollständigen Studiendaten zeigten, dass das Risiko einer Krankenhauseinweisung oder eines Todesfalls bei nicht hospitalisierten, ungeimpften Erwachsenen mit leichter bis mittelschwerer COVID-19-Erkrankung unter Molnupiravir 6,8 % und unter Placebo 9,7 % betrug.' 
-  tags:        [Molnupiravir, nicht geimpft, Krankenhausaufenthalt, Tod]
+  tags:        [Molnupiravir, Ungeimpft, Krankenhausaufenthalt, Tod]
 group:         'Treatments'
 credit:        https://doi.org/10.1056/NEJMoa2116044
 ---
