--- a/_studies/2021-12-22-10.3389_fmolb.2021.632290.md
+++ b/_studies/2021-12-22-10.3389_fmolb.2021.632290.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vitamin-D-Status und SARS-CoV-2-Infektion sowie klinische Ergebnisse von COVID-19'
   description: 'Mehrere Studien deuten auf einen Zusammenhang zwischen 25-Hydroxyvitamin D (25OHD) im Serum und den Folgen einer SARS-CoV-2-Infektion (Severe Acute Respiratory Syndrome Corona-Virus-2) hin, insbesondere dem Schweregrad und der Sterblichkeit im Zusammenhang mit Coronavirus Disease-2019 (COVID-19). Ziel der vorliegenden Meta-Analyse war es, zu untersuchen, ob der Vitamin-D-Status mit dem Schweregrad der COVID-19-Infektion, definiert als ARDS, das eine Aufnahme auf der Intensivstation erfordert, oder mit der Sterblichkeit (primäre Endpunkte) sowie mit der Anfälligkeit für SARS-CoV-2 und COVID-19-bedingte Krankenhausaufenthalte (sekundäre Endpunkte) in Verbindung steht. Eine Suche in PubMed, ScienceDirect, Web of Science, Google Scholar, Scopus und Preprints Repositories wurde bis zum 31. März 2021 durchgeführt, um alle Originalbeobachtungsstudien zu identifizieren, die über Assoziationsmaße oder ausreichende Daten zu deren Berechnung zwischen dem Vitamin-D-Status (Insuffizienz <75, Mangel <50 oder schwerer Mangel <25 nmol/L) und dem Risiko einer SARS-CoV-2-Infektion, einer COVID-19-Krankenhauseinweisung, einer Aufnahme auf der Intensivstation oder eines Todes während eines COVID-19-Krankenhausaufenthalts berichten. Vierundfünfzig Studien (49 als Vollpublikationen und 5 als Vorabveröffentlichungen) wurden für insgesamt 1.403.715 Personen einbezogen. Der Zusammenhang zwischen dem Vitamin-D-Status und der SARS-CoV2-Infektion, der COVID-19-bedingten Hospitalisierung, der COVID-19-bedingten Aufnahme auf der Intensivstation und der COVID-19-bedingten Mortalität wurde in 17, 9, 27 bzw. 35 Studien festgestellt. Schwerer Mangel, Mangel und Insuffizienz von Vitamin D waren alle mit der Aufnahme in die Intensivstation, der Sterblichkeit, der SARS-CoV-2-Infektion und der COVID-19-Krankenhauseinweisung verbunden. Bei der Betrachtung spezifischer Untergruppen (d. h. kaukasische Patienten, Studien mit hoher Qualität und Studien, die bereinigte Assoziationsschätzungen liefern) änderten sich die Ergebnisse der primären Endpunkte nicht. Patienten mit niedrigen Vitamin-D-Spiegeln weisen ein erhöhtes Risiko für ARDS auf, das eine Aufnahme auf der Intensivstation (ICU) oder eine Sterblichkeit aufgrund einer SARS-CoV-2-Infektion erfordert, sowie eine höhere Anfälligkeit für eine SARS-CoV-2-Infektion und einen damit verbundenen Krankenhausaufenthalt.' 
-  tags:        [Vitamin D, Sterblichkeit, SARS-CoV-2-Infektion, Atemnotsyndrom, Intensivstation]
+  tags:        [Vitamin D, Sterblichkeit, Atemnotsyndrom, Intensivstation]
 group:         'Treatments'
 credit:        https://www.frontiersin.org/articles/10.3389/fpubh.2021.736665/full
 ---
