--- a/_studies/2022-01-01-10.11594-jtls.12.01.04.md
+++ b/_studies/2022-01-01-10.11594-jtls.12.01.04.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Toxizität von Nahrungsergänzungsmitteln als Adjuvans für die Behandlung oder Prävention von COVID-19'
   description: 'Kommerziell erhältliche Nahrungsergänzungsmittel, insbesondere Vitamine und Mineralien, erfreuen sich in der Zeit der COVID-19-Pandemie zunehmender Beliebtheit. Der Verkauf von Nahrungsergänzungsmitteln hat sich dynamisch entwickelt, weil man glaubt, dass sie wirksamer sein könnten als herkömmliche antivirale oder Kortikosteroid-Medikamente, und weil die spezifische medizinische Therapie zur Vorbeugung oder Behandlung dieser Krankheit fehlt. Das größte Interesse gilt den immunbezogenen Nährstoffen und Antioxidantien, darunter Vitamin C, Vitamin D, Vitamin E, Selen (Se) und Zink (Zn). Diese werden derzeit in klinischen Studien auf ihre mögliche Anwendung bei der Prävention und Behandlung von COVID-19 untersucht. Diese Übersicht fasst die postulierten Mechanismen von häufig verwendeten Nahrungsergänzungsmitteln zusammen, die die Dauer und den Schweregrad von Virusinfektionen durch Verbesserung der Immunreaktion verringern sollen. Auch ihre Toxizität im Zusammenhang mit potenziellen unerwünschten Wirkungen wird erörtert. Ob diese Moleküle und ihre Menge Patienten mit COVID-19 schaden könnten, sind Forschungsfragen, die es zu untersuchen gilt. In Anbetracht der Wirksamkeit und Sicherheit müssen weitere Untersuchungen durchgeführt werden, um eine höhere Zufuhr von spezifischen Nährstoffen mit immunstärkenden und/oder antioxidativen Eigenschaften zu belegen. Bis einschlägige Antworten vorliegen, sollten alters- und geschlechtsspezifische tolerierbare Höchstmengen für die Zufuhr von Vitaminen und Mineralien berücksichtigt werden, um eine Gewichtszunahme als zusätzlichen Risikofaktor für die Entwicklung von Komplikationen im Krankheitsverlauf zu vermeiden, abgesehen von der Gefahr unangemessener Dosen in Verbindung mit Toxizität. In diesem Bericht werden hochwertige Informationen über spezifische Nährstoffe verbreitet, denen eine positive Wirkung gegen COVID-19 zugeschrieben wird, und es werden bestimmte Forschungslücken angesprochen, die es erforderlich machen, dass die Erforschung der gesundheitlichen Auswirkungen von Nahrungsergänzungsmitteln eng mit dem Alter, dem Ernährungszustand, dem Wohlbefinden und insbesondere mit bestehenden Komorbiditäten verknüpft wird. ' 
-  tags:        [Mineral, Nährstoff, Supplementierung, Vitamine, Vitamin D, Vitamin C, Vitamin E, Selen, Zink]
+  tags:        [Minerale, Nährstoffe, Supplementierung, Vitamine, Vitamin D, Vitamin C, Vitamin E, Selen, Zink]
 group:         'Treatments'
 credit:        https://www.jtrolis.ub.ac.id/index.php/jtrolis/article/view/1867/557
 ---
