--- a/_studies/2022-01-01-ijresm-ISSN-2581-5792.md
+++ b/_studies/2022-01-01-ijresm-ISSN-2581-5792.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die Rolle von Vitamin-D bei der COVID-19-Behandlung'
   description: 'Die COVID-19-Epidemie hat einen weltweiten Gesundheitsnotstand ausgelöst. Über die Schutzfaktoren der Infektion ist wenig bekannt. Daher sind präventive Gesundheitsmaßnahmen zur Senkung des Infektionsrisikos, des Krankheitsverlaufs und des Schweregrads von entscheidender Bedeutung. In dieser Übersichtsarbeit wurde die mögliche Funktion von Vitamin D bei der Senkung des Risikos von COVID-19 und anderen akuten Atemwegsinfektionen sowie deren Schweregrad untersucht. Darüber hinaus wurde in dieser Studie der Zusammenhang zwischen dem Vitamin-D-Spiegel und dem Auftreten von COVID-19 und Todesfällen in 20 europäischen Ländern untersucht (Stand: 20. Mai 2020). In den europäischen Ländern bestand ein signifikanter negativer Zusammenhang zwischen dem mittleren Vitamin-D-Spiegel und den COVID-19-Fällen pro Million Einwohner. In diesen Ländern wurde jedoch kein signifikanter Zusammenhang zwischen Vitamin D und der COVID-19-Mortalität festgestellt. ein signifikanter Zusammenhang zwischen Vitamin D und der COVID-19-Mortalität in diesen Ländern. Einige retrospektive Untersuchungen wiesen auf einen Zusammenhang zwischen dem Vitamin-D-Spiegel und dem Schweregrad der COVID-19-Erkrankung sowie der Sterblichkeit hin, während andere keinen Zusammenhang fanden, wenn Störfaktoren berücksichtigt wurden.' 
-  tags:        [Infektionen, Risikofaktoren, antivirale Mechanismen, Renin-Angiotensin-Achse, biologische Aktivität, Vitamin D]
+  tags:        [Infektion, Risikofaktoren, antivirale Mechanismen, Renin-Angiotensin-Achse, biologische Aktivität, Vitamin D]
 group:         'Treatments'
 credit:        https://doi.org/
 ---
