--- a/_studies/2022-01-10-10.1007_s16024-021-00364-w.md
+++ b/_studies/2022-01-10-10.1007_s16024-021-00364-w.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Wahrgenommene Einschränkungen während der COVID-19-Pandemie bei älteren Personen in der Schweiz'
   description: 'Die aktuelle Coronavirus-Pandemie hat verschiedene Auswirkungen auf den Alltag älterer Menschen. Im Rahmen der pandemiebedingten Schutzmaßnahmen wurden vor allem Menschen über 65 Jahren aufgefordert, sich von öffentlichen Plätzen fernzuhalten und direkten Körperkontakt zu vermeiden. In diesem Beitrag wird untersucht, wie sich die Pandemie auf das Empfinden der über 50-Jährigen in Bezug auf die eingeschränkte Versorgung mit alltäglichen Dingen, körperliche Aktivität im Freien und soziale Kontakte auswirkte. Im Mai und Juni 2020 wurden 1011 in der Schweiz lebende Personen im Alter von 50 Jahren und älter telefonisch befragt. Das Durchschnittsalter der Befragten lag bei 65 Jahren und 53 % der Befragten waren Frauen. Die Ergebnisse zeigen, dass die Befragten kaum negative Veränderungen in der Versorgung mit alltäglichen Dingen oder Aktivitäten im Freien verspürten. 43 % der Befragten gaben jedoch an, dass sie während der Pandemie und den damit verbundenen Schutzmassnahmen häufiger das Gefühl hatten, nicht genügend Zeit mit Menschen verbringen zu können, die ihnen wichtig sind. Die multivariaten Ergebnisse zeigen, dass die Bildung eine Rolle bei der Bewertung des Alltags durch die Befragten spielte. Die Studie zeigt auf, wie ältere Menschen mögliche Einschränkungen im Alltag empfinden und sollte die Diskussion in der praktischen gerontologischen Arbeit anregen, die subjektiven Wahrnehmungen älterer Menschen besser zu berücksichtigen.' 
-  tags:        [Älterwerden, Einschränkungen, soziale Kontakte, Wohlbefinden, Körperliche Aktivität]
+  tags:        [Älterwerden, Einschränkungen, Soziale Kontakte, Wohlbefinden, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1007/s16024-021-00364-w
 ---
