--- a/_studies/2022-02-07-10.3390-ijerph19031853.md
+++ b/_studies/2022-02-07-10.3390-ijerph19031853.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Warum körperliche Aktivität in klinischen Studien für COVID-19-Impfstoffe berücksichtigt werden sollte: Ein Fokus auf Risikogruppen'
   description: 'Seit die Weltgesundheitsorganisation Anfang 2020 den globalen COVID-19-Notstand ausgerufen hat, sind mehrere Impfstoffkandidaten zur Bekämpfung von SARS-CoV-2 aufgetaucht, und einige von ihnen wurden zugelassen und in Impfkampagnen weltweit eingesetzt. Obwohl die klinischen Studien für diese Impfstoffe mit sehr kontrollierten Methoden und genauen immunologischen Tests durchgeführt wurden, enthielten die klinischen Fragebögen keine Fragen zum Profil der körperlichen Aktivität der Probanden. Es ist erwiesen, dass körperliche Aktivität eine zentrale Rolle bei der Immunantwort nach der Impfung spielt, die durch die Aktivierung von Zytokinen, Antikörpern und Zellen ausgelöst wird. Dieses Konzept hätte bei der Bewertung der Wirksamkeit der COVID-19-Impfstoffkandidaten, insbesondere bei älteren und übergewichtigen Menschen, berücksichtigt werden müssen. Im Folgenden werden Daten aus der Literatur diskutiert, die deutliche Hinweise darauf liefern, wie wichtig die Analyse von Parametern der körperlichen Aktivität ist, um die Genauigkeit klinischer Studien zur Bewertung der Wirksamkeit von Impfstoffkandidaten zu verbessern.' 
-  tags:        [Impfungen, Klinische Studien, Körperliche Aktivität]
+  tags:        [Impfung, Klinische Studien, Körperliche Aktivität]
 group:         'Vaccines'
 credit:        https://doi.org/10.3390/ijerph19031853
 ---
