--- a/_studies/2020-10-28-10.3389_fimmu.2020.590716.md
+++ b/_studies/2020-10-28-10.3389_fimmu.2020.590716.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Bioaktive Tees modulieren die angeborene Immunität: Ein Blick auf die COVID-19-Pandemie'
   description: 'Die Beeinträchtigung der angeborenen Immunität führte zu einer Unterbrechung der Kaskade von Signalwegen, die pro-inflammatorische Zytokine hochregulierten, Interferone verringerten, natürliche Killerzellen verarmten und die Produktion reaktiver Sauerstoffspezies aktivierten. Diese Bedingungen beeinträchtigen die Fähigkeit des Körpers, Infektionskrankheiten zu bekämpfen, und spielen auch eine entscheidende Rolle bei der Krankheitsprogression. Hier liegt der Schwerpunkt auf der ernährungsbedingten Immunität zur Regulierung einer wirksamen angeborenen Immunantwort zur Bekämpfung von Infektionskrankheiten wie der neuartigen Coronavirus-Krankheit (COVID 19). Auf der Grundlage von Entdeckungen bei In-vitro-Experimenten, Tiermodellen und Studien am Menschen haben Tee-Polyphenole, Mikronährstoffe und Vitamine das Potenzial, die angeborene Immunantwort zu modulieren und zu verbessern. Dieser Artikel bietet einen umfassenden Überblick über Tee (Camellia sinensis L.), einen Heißwasserextrakt aus getrockneten, verarbeiteten Teeblättern, die aus jungen Trieben der Teepflanze gewonnen werden, als Modulator der angeborenen Immunität. Teeaufguss ist reich an Polyphenolen; Epigallocatechingallat (EGCG) und Theaflavin (TF), die wichtigsten Polyphenole des grünen bzw. schwarzen Tees. In Studien wurde ihre immunmodulatorische Wirkung nachgewiesen. Teeaufgüsse sind auch reich an Alkaloiden; Koffein und seine Zwischenprodukte Theophyllin und Theobromin, die entzündungshemmende Eigenschaften haben. Da die Teepflanze eine säureliebende, mehrjährige Pflanze ist, kann sie verschiedene Mikronährstoffe wie Kupfer (Cu), Eisen (Fe), Mangan (Mn), Selen (Se) und Zink (Zn) aus dem Wachstumsmedium, d. h. aus dem Boden, aufnehmen, was zu ihrem beträchtlichen Vorkommen im Teeaufguss führt. Mikronährstoffe sind ein wesentlicher Bestandteil der angeborenen Immunantwort. Insgesamt wird in dieser Übersicht der Teeaufguss als wichtige Quelle für die ernährungsbedingte Immunität vorgestellt, die die angeborene Immunantwort verstärken kann, um die beispiellose COVID-19-Pandemie einzudämmen.' 
-  tags:        [Zytokine, angeborene Immunität, Mikronährstoffe, ernährungsbedingte Immunität, Tee-Polyphenole, Vitamine]
+  tags:        [Zytokine, Angeborene Immunität, Mikronährstoffe, Ernährungsbedingte Immunität, Tee-Polyphenole, Vitamine]
 group:         'Treatments'
 credit:        https://doi.org/10.3389/fimmu.2020.590716
 ---
