--- a/_studies/2021-03-09-10.3390_ijerph18052772.md
+++ b/_studies/2021-03-09-10.3390_ijerph18052772.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Ansätze zum Ernährungsscreening bei Patienten mit Coronavirus-Erkrankungen 2019 (COVID-19)'
   description: 'Unterernährung ist bei schweren Patienten mit Coronavirus-Krankheit 2019 (COVID-19) häufig, vor allem bei älteren Erwachsenen und Patienten mit Begleiterkrankungen. Sie ist auch mit einer atypischen Präsentation der Krankheit verbunden. Trotz des möglichen Beitrags der Mangelernährung zum Erwerb und zur Schwere der COVID-19-Erkrankung ist nicht klar, mit welchen Ernährungsscreening-Maßnahmen eine Mangelernährung bei diesen Patienten am besten in einem frühen Stadium diagnostiziert werden kann. Dies ist angesichts der Dringlichkeit und des raschen Fortschreitens der Krankheit in gefährdeten Gruppen von entscheidender BedUeutung. Dementsprechend wird in dieser Übersichtsarbeit die verfügbare Literatur zu verschiedenen Ernährungsscreening-Ansätzen untersucht, die bei COVID-19-Patienten eingesetzt werden, wobei ein besonderer Schwerpunkt auf älteren Erwachsenen liegt. Nach einer Literaturrecherche wurden 14 Studien zur Bewertung der Mangelernährung bei COVID-19-Patienten ausgewählt und untersucht. Das Nutrition Risk Screening 2002 (NRS-2002) hat eine höhere Sensitivität als andere traditionelle Screening-Maßnahmen gezeigt. Der CONUT-Score (Controlling Nutritional Status), der sich aus dem Serumalbuminspiegel, dem Cholesterinspiegel und der Lymphozytenzahl zusammensetzt, sowie ein kombinierter CONUT-Laktatdehydrogenase-C-reaktives Protein-Score wiesen bei COVID-19-Patienten im mittleren und höheren Lebensalter eine noch bessere Vorhersagekraft auf als der NRS-2002 (0,81 % und 0,92 % gegenüber 0,79 %). Daher können einfache, auf routinemäßig durchgeführten Laboruntersuchungen basierende Maßnahmen wie der CONUT-Score eine zeitnahe, kostengünstige und wertvolle Alternative zur Identifizierung von COVID-19-Patienten mit hohem Ernährungsrisiko sein. Die Mini-Ernährungsanalyse (MNA) war die einzige Maßnahme, mit der eine Restunterernährung und ein hohes Unterernährungsrisiko bei remittierenden Patienten festgestellt werden konnte - der MNA-Score korrelierte mit Hypoalbuminämie, Hyperzytokinämie und Gewichtsverlust. Ältere Männer mit schweren Entzündungen, gastrointestinalen Symptomen und vorbestehenden Begleiterkrankungen (Diabetes, Adipositas oder Bluthochdruck) sind sowohl in der akuten Phase als auch in der Rekonvaleszenz anfälliger für eine Unterernährung und damit für eine schlechte COVID-19-Prognose. Sie benötigen daher eine häufige Ernährungsüberwachung und -unterstützung, während die Erkennung und Behandlung von Unterernährung in der Allgemeinbevölkerung notwendig sein könnte, um die Widerstandsfähigkeit gegen COVID-19 zu erhöhen.' 
-  tags:        [Coronavirus-Krankheit 2019, Zytokinsturm, ältere Erwachsene, ältere Menschen, Altern, altersbedingte nicht übertragbare Krankheiten, Mangelernährung, Ernährungsdefizite, Nutrition Risk Screening 2002, der Controlling Nutritional Status Score, CONUT-Score, Anämie, Ferritin, Vitamin D, Selen, Mikronährstoffe]
+  tags:        [Coronavirus-Krankheit 2019, Zytokinsturm, Ältere Erwachsene, Ältere Menschen, Altern, Altersbedingte nicht übertragbare Krankheiten, Mangelernährung, Ernährungsdefizite, Nutrition Risk Screening 2002, der Controlling Nutritional Status Score, CONUT-Score, Anämie, Ferritin, Vitamin D, Selen, Mikronährstoffe]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/ijerph18052772
 ---
