--- a/_studies/2021-05-16-10.3390_ijms22105251.md
+++ b/_studies/2021-05-16-10.3390_ijms22105251.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Immunologische Aspekte der SARS-CoV-2-Infektion und die vermutete positive Rolle von Vitamin D'
   description: 'Die Coronavirus-Krankheit 2019 (COVID-19), verursacht durch das schwere akute respiratorische Syndrom Coronavirus-2 (SARS-CoV-2), ist nach wie vor eine globale Gesundheitskrise. Unmittelbar nach dem Einatmen von SARS-CoV-2-Viruspartikeln beherbergen Epithelzellen des alveolären Typs II lokale angeborene Immunität und initiieren diese. Diese Partikel können zirkulierende Makrophagen infizieren, die dann die Coronavirus-Antigene den T-Zellen präsentieren. In der Folge führen die Aktivierung und Differenzierung verschiedener Arten von T-Zellen sowie die unkontrollierte Freisetzung von Zytokinen (auch als Zytokinstürme bezeichnet) zur Zerstörung von Gewebe und zur Verstärkung der Immunreaktion. Vitamin D stärkt die angeborene Immunität, die zur Bekämpfung von COVID-19 erforderlich ist, indem es den Toll-like-Rezeptor 2 aktiviert. Es steigert auch die antimikrobielle Peptidsynthese, z. B. durch die Förderung der Expression und Sekretion von Cathelicidin und β-Defensin; es fördert die Autophagie durch die Bildung von Autophagosomen und steigert die Synthese von lysosomalen Abbauenzymen in Makrophagen. Was die adaptive Immunität betrifft, so verstärkt Vitamin D die CD4+ T-Zellen, unterdrückt die T-Helferzellen und fördert die Produktion von virusspezifischen Antikörpern durch die Aktivierung von T-Zell-abhängigen B-Zellen. Darüber hinaus dämpft Vitamin D die Freisetzung proinflammatorischer Zytokine durch CD4+ T-Zellen über den Nuklearfaktor κB und verhindert so die Entwicklung eines Zytokinsturms. SARS-CoV-2 dringt in Zellen ein, nachdem seine Spike-Proteine an Angiotensin-Converting-Enzyme-2 (ACE2)-Rezeptoren gebunden sind. Vitamin D erhöht die Bioverfügbarkeit und Expression von ACE2, das möglicherweise für das Abfangen und Inaktivieren des Virus verantwortlich ist. Die Aktivierung des Renin-Angiotensin-Aldosteron-Systems (RAS) ist für die Gewebezerstörung, die Entzündung und das Organversagen im Zusammenhang mit SARS-CoV-2 verantwortlich. Vitamin D hemmt die Renin-Expression und dient als negativer RAS-Regulator. Zusammenfassend lässt sich sagen, dass Vitamin D den Körper durch einen neuartigen komplexen Mechanismus gegen SARS-CoV-2 schützt, der durch Wechselwirkungen zwischen der Aktivierung der angeborenen und der adaptiven Immunität, der ACE2-Expression und der Hemmung des RAS-Systems funktioniert. Mehrere Beobachtungsstudien haben gezeigt, dass die Serumkonzentration von 25-Hydroxyvitamin D umgekehrt mit dem Auftreten oder dem Schweregrad von COVID-19 korreliert ist. Die bisher gesammelten Beweise erfüllen im Allgemeinen die Hill’schen Kausalitätskriterien in einem biologischen System, obwohl die experimentelle Überprüfung nicht ausreichend ist. Wir vermuten, dass eine angemessene Vitamin-D-Supplementierung für die Milderung des Fortschreitens und des Schweregrads von COVID-19 von wesentlicher Bedeutung sein könnte. Künftige Studien sind erforderlich, um die Dosierung und Wirksamkeit einer Vitamin-D-Supplementierung in verschiedenen Populationen von Personen mit COVID-19 zu bestimmen.' 
-  tags:        [Coronavirus-Krankheit 2019, Schweres Akutes Respiratorisches Syndrom Coronavirus 2, Vitamin D, adaptive Immunität, angeborene Immunität, Angiotensin konvertierendes Enzym 2 (ACE2), Renin-Angiotensin-Aldosteron-System]
+  tags:        [Coronavirus-Krankheit 2019, Schweres Akutes Respiratorisches Syndrom Coronavirus 2, Vitamin D, Adaptive Immunität, Angeborene Immunität, Angiotensin konvertierendes Enzym 2 (ACE2), Renin-Angiotensin-Aldosteron-System]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/ijms22105251
 ---
