--- a/_studies/2021-10-02-10.3390_jpm11100999.md
+++ b/_studies/2021-10-02-10.3390_jpm11100999.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Direkte und indirekte Auswirkungen von COVID-19 bei gebrechlichen älteren Menschen: Interventionen und Empfehlungen'
   description: 'Gebrechlichkeit ist ein Zustand der Anfälligkeit gegenüber Stressfaktoren aufgrund einer verringerten physiologischen Reserve, die zu schlechten gesundheitlichen Ergebnissen führt. Dieser Zustand hängt mit chronischen Erkrankungen zusammen, von denen viele Risikofaktoren für die Ergebnisse bei älteren Patienten mit SARS-COV-2 sind. In dieser Übersichtsarbeit soll die Gebrechlichkeit als physiologische Anfälligkeit während der COVID-19-Pandemie bei älteren Patienten beschrieben werden, wobei die direkten und indirekten Auswirkungen der SARS-COV-2-Infektion und ihre Prognose bei gebrechlichen Personen sowie die Interventionen und Empfehlungen zur Verringerung ihrer Auswirkungen zusammengefasst werden. Kohortenstudien haben gezeigt, dass Patienten mit einer klinischen Frailty-Skala von mehr als fünf ein höheres Sterberisiko und ein höheres Risiko für eine mechanische Beatmung nach COVID-19 haben; andere Skalen haben Frailty jedoch auch mit längeren Krankenhausaufenthalten und schwereren Formen der Krankheit in Verbindung gebracht. Außerdem wirken sich die indirekten Auswirkungen der Pandemie negativ auf den Gesundheitszustand älterer Menschen aus. Aus diesen Gründen wird eine ganzheitliche Intervention vorgeschlagen, die auf einer umfassenden geriatrischen Beurteilung gebrechlicher Patienten (präventiv oder nach der Infektion) basiert und den Schwerpunkt auf körperliche Aktivität und Ernährungsempfehlungen legt, was eine potenzielle präventive Intervention bei Virusinfektionen durch COVID-19 sein könnte.' 
-  tags:        [Gebrechlichkeit, Vulnerabilität, ältere Menschen, CGA, funktionelle Lebensmittel]
+  tags:        [Gebrechlichkeit, Vulnerabilität, Ältere Menschen, CGA, Funktionelle Lebensmittel]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/jpm11100999
 ---
