--- a/_studies/2021-10-08-10.1126_science.abh1823.md
+++ b/_studies/2021-10-08-10.1126_science.abh1823.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Kreuzreaktive CD4+ T-Zellen verstärken die SARS-CoV-2-Immunantwort bei Infektion und Impfung'
   description: 'Kreuzreaktive T-Zellen helfen bei der Bekämpfung. Es gibt immer mehr Hinweise darauf, dass das immunologische Gedächtnis nach einer Infektion mit saisonalen humanen Coronaviren (hCoVs) zum Kreuzschutz gegen das schwere akute respiratorische Syndrom Coronavirus 2 (SARS-CoV-2) beiträgt. Loyal et al. identifizierten ein universelles, immundominantes Coronavirus-Peptid, das sich in der Fusionspeptiddomäne des Coronavirus-Spike-Proteins befindet. Dieses Peptid wird von CD4+ T-Zellen bei 20 % der nicht exponierten Personen, bei mehr als 50 % der SARS-CoV-2-Rekonvaleszenten und bei 97 % der mit dem Impfstoff COVID-19 von Pfizer-BioNTech behandelten Personen erkannt. Obwohl diese Coronavirus-reaktiven T-Zellen ubiquitär vorhanden sind, nehmen sie mit zunehmendem Alter ab, was zum Teil die erhöhte Anfälligkeit älterer Menschen für COVID-19 erklären könnte.' 
-  tags:        [kreuzreaktive CD4+ T-Zellen, SARS-CoV-2 Immunantworten, Infektion, Impfung]
+  tags:        [kreuzreaktive CD4+ T-Zellen, Immunantwort, Infektion, Impfung]
 group:         'Immunity'
 credit:        https://doi.org/10.1126/science.abh1823
 ---
