--- a/_studies/2021-12-18-10.1016_j.jclinepi.2021.12.018.md
+++ b/_studies/2021-12-18-10.1016_j.jclinepi.2021.12.018.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Voreingenommenheit als Ursache für Inkonsistenz in Ivermectin-Studien für COVID-19: Eine systematische Überprüfung. Die vermuteten Vorteile von Ivermectin beruhen hauptsächlich auf potenziell verzerrten Ergebnissen'
   description: 'Ziel dieser systematischen Übersichtsarbeit ist, die Wirkungen von Ivermectin zur Vorbeugung und Behandlung von Patienten mit COVID-19 zusammenzufassen und Inkonsistenzen in den Ergebnissen einzelner Studien zu bewerten, wobei der Schwerpunkt auf dem Risiko einer Verzerrung aufgrund methodischer Einschränkungen liegt. Wir durchsuchten die L.OVE-Plattform bis zum 6. Juli 2021 und schlossen randomisierte Studien (RCTs) ein, die Ivermectin mit Standard- oder anderen aktiven Behandlungen verglichen. Wir führten eine paarweise Meta-Analyse mit zufälligen Effekten durch, bewerteten die Beweissicherheit anhand des GRADE-Ansatzes und führten eine Sensitivitätsanalyse durch, bei der Studien mit Verzerrungsrisiko ausgeschlossen wurden. Wir schlossen 29 RCTs ein, an denen 5592 Fälle teilnahmen. Insgesamt war die Beweissicherheit sehr gering bis gering, was darauf hindeutet, dass Ivermectin einen erheblichen Nutzen haben könnte. Nach dem Ausschluss von Studien, die bei der Bewertung des Verzerrungsrisikos als "hohes Risiko" oder "einige Bedenken" eingestuft wurden, änderten sich die meisten Schätzungen der Wirkung jedoch erheblich: Im Vergleich zur Standardbehandlung deuten Belege mit geringer Sicherheit darauf hin, dass Ivermectin möglicherweise weder die Sterblichkeit (RD 7 weniger pro 1000) noch die mechanische Beatmung (RD 6 mehr pro 1000) verringert, und Belege mit mittlerer Sicherheit zeigen, dass es wahrscheinlich weder die Symptombehebung oder -verbesserung (RD 14 mehr pro 1000) noch die Virusbeseitigung (RD 12 weniger pro 1000) erhöht. Ivermectin verbessert möglicherweise nicht die klinisch wichtigen Ergebnisse bei Patienten mit COVID-19, und seine Auswirkungen als prophylaktische Maßnahme bei exponierten Personen sind ungewiss. Frühere Berichte, die auf einen erheblichen Nutzen von Ivermectin schließen lassen, beruhen auf potenziell verzerrten Ergebnissen, die aus Studien mit erheblichen methodischen Einschränkungen stammen. Weitere Forschung ist erforderlich.' 
-  tags:        [Coronavirus-Infektionen, Systematische Überprüfung, Verzerrung, Ivermectin, Schweres Akutes Respiratorisches Syndrom Coronavirus 2]
+  tags:        [Infektion, Systematische Überprüfung, Verzerrung, Ivermectin, Schweres Akutes Respiratorisches Syndrom Coronavirus 2]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.jclinepi.2021.12.018
 ---
