--- a/_studies/2022-01-10-10.1038_s41467-021-27674-x.md
+++ b/_studies/2022-01-10-10.1038_s41467-021-27674-x.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Kreuzreaktive Gedächtnis-T-Zellen stehen in Zusammenhang mit dem Schutz vor einer SARS-CoV-2-Infektion bei COVID-19-Kontakten'
   description: 'Kreuzreaktive Immunantworten auf SARS-CoV-2 wurden in präpandemischen Kohorten beobachtet und sollen zum Wirtsschutz beitragen. Hier untersuchen wir 52 COVID-19-Haushaltskontakte, um Immunreaktionen zu den frühesten Zeitpunkten nach der SARS-CoV-2-Exposition zu erfassen. Mithilfe eines dualen Zytokin-FLISpot-Tests an mononukleären Zellen des peripheren Blutes zählen wir die Häufigkeit von T-Zellen auf, die spezifisch für Spike-, Nukleokapsid-, Membran-, Hüll- und ORF1-Epitope von SARS-CoV-2 sind und mit endemischen Coronaviren des Menschen kreuzreagieren. Wir beobachten höhere Frequenzen von kreuzreaktiven und Nukleokapsid-spezifischen IL-2-sezernierenden Gedächtnis-T-Zellen bei Kontakten, die trotz der Exposition PCR-negativ blieben (n = 26), im Vergleich zu denen, die PCR-positiv wurden (n = 26); es wurde kein signifikanter Unterschied in der Häufigkeit der Reaktionen auf Spike beobachtet, was auf eine begrenzte Schutzfunktion der Spike-kreuzreaktiven T-Zellen hindeutet. Unsere Ergebnisse deuten also darauf hin, dass bereits vorhandene, nicht mit Spikes kreuzreagierende Gedächtnis-T-Zellen SARS-CoV-2-naive Kontaktpersonen vor einer Infektion schützen, was die Aufnahme von Nicht-Spike-Antigenen in Impfstoffe der zweiten Generation unterstützt.' 
-  tags:        [Immunantwort, T-Zellen, SARS-CoV-2-Infektion, Impfstoffe]
+  tags:        [Immunantwort, T-Zellen, Infektion, Impfstoffe]
 group:         'Immunity'
 credit:        https://doi.org/10.1038/s41467-021-27674-x
 ---
