--- a/_studies/2022-02-02-10.1016-j.lfs.2022.120368.md
+++ b/_studies/2022-02-02-10.1016-j.lfs.2022.120368.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Mechanismen und klinische Beweise für den Einsatz von Melatonin bei schweren COVID-19-Patienten zur Senkung der Sterblichkeitsrate'
   description: 'Die Angst vor einer SARS-CoV-2-Infektion ist auf die hohe Sterblichkeitsrate im Vergleich zur saisonalen Grippe zurückzuführen. Bislang wurden nur wenige Arzneimittel entwickelt, die die Sterblichkeit schwerer COVID-19-Patienten, insbesondere solcher, die eine Trachealintubation benötigen, deutlich senken könnten. Der Schweregrad und die Sterblichkeit einer SARS-CoV-2-Infektion hängen nicht nur von der Virulenz des Virus ab, sondern werden vor allem durch den Zytokinsturm und die zerstörerische Entzündung bestimmt, die durch die Immunreaktion des Wirts ausgelöst werden. Daher könnte die gezielte Beeinflussung der Immunantwort des Wirtes eine bessere Strategie zur Bekämpfung dieser Pandemie sein. Melatonin ist ein Molekül mit vielfältigen Wirkungen auf eine Virusinfektion. Dazu gehört, dass es die Überreaktion der angeborenen Immunreaktion herunterreguliert, um Entzündungen zu unterdrücken, die adaptive Immunreaktion fördert, um die Antikörperbildung zu verstärken, das Eindringen des Virus in die Zelle hemmt und seine Vermehrung begrenzt. Damit ist Melatonin ein potenziell hervorragender Kandidat für die Behandlung von schweren COVID-19-Fällen. Mehrere klinische Studien haben bestätigt, dass Melatonin als Zusatz zur konventionellen Therapie die Sterblichkeit von schweren COVID-19-Patienten deutlich verringert. Die Kosten für Melatonin betragen nur einen Bruchteil der Medikamente, die von der FDA für die Notfallbehandlung von COVID-19 zugelassen sind. Da Melatonin selbst verabreicht werden kann, kostengünstig ist und eine hohe Sicherheit bietet, könnte es in allen Ländern der Welt zu erschwinglichen Preisen zur Verfügung gestellt werden. Wir empfehlen, Melatonin zur Behandlung schwerer COVID-19-Patienten einzusetzen, um die Sterblichkeitsrate zu senken. Sollte dies gelingen, würde es die Angst vor der SARS-CoV-2-Pandemie verringern und dazu beitragen, dass das Leben wieder zur Normalität zurückkehrt.' 
-  tags:        [Melatonin, angeborene Immunität, adaptive Immunität, Entzündung, Hauptprotease, Nirmatrelvir, Ritonavir]
+  tags:        [Melatonin, Angeborene Immunität, Adaptive Immunität, Entzündung, Hauptprotease, Nirmatrelvir, Ritonavir]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.lfs.2022.120368
 ---
