--- a/_studies/2022-02-03-10.1001-jama.2022.1393.md
+++ b/_studies/2022-02-03-10.1001-jama.2022.1393.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Prävalenz und Dauerhaftigkeit von SARS-CoV-2-Antikörpern bei ungeimpften US-Erwachsenen nach Verlauf von COVID-19'
   description: 'Am 28. Dezember 2021 waren etwa 27 % der US-Bevölkerung nicht gegen SARS-CoV-2 geimpft, doch die Prävalenz der natürlichen Immunität ist nach wie vor unbekannt. Studien mit Blutspendern können Selektionsfehler aufweisen und es fehlen klinische Informationen. Eine frühere COVID-19-Infektion ist ein mögliches Surrogat für die natürliche Immunität, aber eine Studie deutet darauf hin, dass 36 % der COVID-geimpften Personen serologische Non-Responder sind. Selbst bei Personen, die Antikörper entwickeln, ist die Dauerhaftigkeit dieser Reaktion über 6 Monate hinaus unbekannt. Wir haben die natürliche Immunität und die langfristige Beständigkeit bei ungeimpften Personen anhand von Anti-Spike-Antikörpern, der ersten "Verteidigungslinie" gegen SARS-CoV-2, untersucht.' 
-  tags:        [ungeimpfte Personen, natürliche Immunität, Antikörper]
+  tags:        [Ungeimpft, Natürliche Immunität, Antikörper]
 group:         'Immunity'
 credit:        https://doi.org/10.1001/jama.2022.1393
 ---
